--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title></title>
+    <title>SCP</title>
   </head>
   <body>
     <div class="logo">
       <a href="index2.html">
-      <img class="Pause" src="https://im3.ezgif.com/tmp/ezgif-3-3ac62ef7da82-gif-jpg/frame_00_delay-0.1s.jpg"
-      alt="SCP Logo Static" width="67.75%" height="67.75%">
-      <img class="Go" src="https://media.tenor.com/images/3ac62ef7da826103221763b0966a91f7/tenor.gif"
+      <img class="Pause" src="https://pbs.twimg.com/profile_images/1138637906074132482/KCjAk2i_.jpg"
+      alt="SCP Logo Static" width="70.5%" height="70.5%">
+      <img class="Go" src="https://pa1.narvii.com/7081/25ca91a1c0e18af60c484b95e66fdb627c12e694r1-320-308_00.gif"
       alt="SCP Logo" width="40%" height="40%">
       </a>
     </div>
