--- a/index2.html
+++ b/index2.html
@@ -10,11 +10,213 @@
   <body>
     <div class="home">
       <a href="index.html">
-      <img class="stop" src="https://im3.ezgif.com/tmp/ezgif-3-4d9800800a74-gif-jpg/frame_09_delay-0.07s.jpg"
-      alt="Static Logo">
       <img class="move" src="https://cdn2.scratch.mit.edu/get_image/gallery/5267935_200x130.png"
-      alt="Glitch Logo">
+      alt="Glitch Logo" width="70%">
       </a>
+      <div class="title">
+        <p>Secure. Contain. Protect.</p>
+      </div>
+      <div class="meaning">
+        <p><center><font size="6", color="white">Object Class - Scale to
+          determine danger of anomalies</font></center></p>
+        <p><font color="Pink">Neutralized</font><font color="white"> - Anomaly
+          is neutralized</font></p>
+        <p><font color="blue">Safe</font><font color="white"> - Anomaly is
+          easily containable and poses almost no danger to the world outside
+          </font></p>
+        <p><font color="green">Euclid</font><font color="white"> - Anomoly is
+          containable, but it is unknown whether danger is posed by
+          anomaly</font></p>
+        <p><font color="red">Keter</font><font color="white"> - Anomaly is hard
+          to contain, and may pose great danger</font></p>
+        <p><font color="white">Thaumiel - Anomaly is near impossible to contain,
+          or is used as containment method, and has the possibility to cause
+          immense damage</font></p>
+        <p><font color="yellow">Apollyon</font><font color="white"> - Anomaly is
+          virtually uncontainable. Can and will breach at any given moment, can
+          cause extinction level catastrophes</font></p>
+        <p><center><font size="6", color="white">There are always exceptions to
+          these classifications, keep that in mind</font></center></p>
+      </div>
+    </div>
+    <div class="contain">
+      <table style="width:35%">
+        <tr>
+          <th><a href="#049">SCP-049</a></th>
+          <th><font color="green">The Plague Doctor</font></th>
+        </tr>
+        <tr>
+          <th><a href="#055">SCP-055</a></th>
+          <th><font color="red">[unknown]</font></th>
+        </tr>
+        <tr>
+          <th><a href="#087">SCP-087</a></th>
+          <th><font color="green">The Stairwell</font></th>
+        </tr>
+        <tr>
+          <th><a href="#093">SCP-093</a></th>
+          <th><font color="green">Red Sea Object</font></th>
+        </tr>
+        <tr>
+          <th><a href="#096">SCP-096</a></th>
+          <th><font color="green">The Shy Guy</font></th>
+        </tr>
+        <tr>
+          <th><a href="#106">SCP-106</a></th>
+          <th><font color="green">The Old Man</font></th>
+        </tr>
+        <tr>
+          <th><a href="#173">SCP-173</a></th>
+          <th><font color="green">The Sculpture</font></th>
+        </tr>
+        <tr>
+          <th><a href="#231">SCP-231</a></th>
+          <th><font color="red">Special Personel Requirements</font></th>
+        </tr>
+        <tr>
+          <th><a href="#294">SCP-294</a></th>
+          <th><font color="green">The Coffee Machine</font></th>
+        </tr>
+        <tr>
+          <th><a href="#426">SCP-426</a></th>
+          <th><font color="green">I am a Toaster</font></th>
+        </tr>
+        <tr>
+          <th><a href="#682">SCP-682</a></th>
+          <th><font color="red">Hard-to-Destroy Reptile</font></th>
+        </tr>
+        <tr>
+          <th><a href="#895">SCP-895</a></th>
+          <th><font color="blue">Camera Disruption</font></th>
+        </tr>
+        <tr>
+          <th><a href="#914">SCP-914</a></th>
+          <th><font color="blue">The Clockworks</font></th>
+        </tr>
+        <tr>
+          <th><a href="#999">SCP-999</a></th>
+          <th><font color="blue">The Tickle Monster</font></th>
+        </tr>
+        <tr>
+          <th><a href="#1730">SCP-1730</a></th>
+          <th><font color="pink">What Happened to Site-13</font></th>
+        </tr>
+        <tr>
+          <th><a href="#1981">SCP-1981</a></th>
+          <th><font color="blue">RONALD REAGAN CUT UP WHILE TALKING</font></th>
+        </tr>
+        <tr>
+          <th><a href="#2000">SCP-2000</a></th>
+          <th><font color="white">Deus Ex Machina</font></th>
+        </tr>
+        <tr>
+          <th><a href="#2317">SCP-2317</a></th>
+          <th><font color="red">A Door to Another World</font></th>
+        </tr>
+        <tr>
+          <th><a href="#2521">SCP-2521</a></th>
+          <th><font color="red">●●|●●●●●|●●|●</font></th>
+        </tr>
+        <tr>
+          <th><a href="#3000">SCP-3000</a></th>
+          <th><font color="white">Ananteshesha</font></th>
+        </tr>
+        <tr>
+          <th><a href="#3001">SCP-3001</a></th>
+          <th><font color="green">Red Reality</font></th>
+        </tr>
+        <tr>
+          <th><a href="#3008">SCP-3008</a></th>
+          <th><font color="green">A Perfectly Normal, Regular Old Ikea</font></th>
+        </tr>
+        <tr>
+          <th><a href="#3999">SCP-3999</a></th>
+          <th><font color="yellow">I Am At The Center of Everything That Happens
+            To Me</font></th>
+        </tr>
+        <tr>
+          <th><a href="#4999">SCP-4999</a></th>
+          <th><font color="red">Someone to Watch Over Us</font></th>
+        </tr>
+      </table>
+    </div>
+    <div class="profile">
+      <div class="set">
+       <a name="049"><img class="scp1" src="https://scp-wiki.wdfiles.com/local--files/scp-049/SCP-049"
+         alt="SCP-049" width="35%"></a>
+       <a name="055"><img class="scp2" src="https://cdn1.iconfinder.com/data/icons/rounded-flat-country-flag-collection-1/2000/_Unknown.png"
+         alt="SCP-055" width="35%"></a>
+       <a name="087"><img class="scp3" src="https://lh3.googleusercontent.com/proxy/Q3mC_5gDm7kS5abjtgkbcyuaKGEWUJmtvgKwATKwDVhErK0IZerUoyKx_xDV1fha1J0uxlLPZtQX7x0"
+         alt="SCP-087" width="35%"></a>
+       <a name="093"><img class="scp4" src="https://i.imgur.com/fgv7B4l.png"
+         alt="SCP-093" width="35%"></a>
+       <a name="096"><img class="scp5" src="https://i.redd.it/5dx4muk6qed21.jpg"
+         alt="SCP-096" width="35%"></a>
+       <a name="106"><img class="scp6" src="https://scp-wiki.wdfiles.com/local--files/scp-106/106emergenceklay.jpg"
+         alt="SCP-106" width="35%"></a>
+       <a name="173"><img class="scp7" src="https://scp-wiki.wdfiles.com/local--files/scp-173/SCP-173.jpg"
+         alt="SCP-173" width="35%"></a>
+       <a name="231"><img class="scp8" src="https://vignette.wikia.nocookie.net/vsdebating/images/0/0b/SCP-231.png/revision/latest/scale-to-width-down/340?cb=20170425202046"
+         alt="SCP-231" width="35%"></a>
+       <a name="294"><img class="scp9" src="https://lh3.googleusercontent.com/proxy/sWW9RJN_TswQRGyIh89YAN9uebwP-m5GuFElE2WcJxv0jivtbeGdMJU1-g6jUkXd3i9Xy-Vbs_G8gRsZvfwV3Njtg9nfFSu8AkiFDJvQ7I0Ic5KLeiWBf4n0RhcDkkMwskagu0gCLnVQ"
+         alt="SCP-294" width="35%"></a>
+       <a name="426"><img class="scp10" src="https://i.pinimg.com/originals/d3/4f/e5/d34fe54b0687de5a3114228e7482117a.jpg"
+         alt="SCP-426" width="35%"></a>
+       <a name="682"><img class="scp11" src="https://scp-wiki.wdfiles.com/local--files/scp-682/monster8editub9.jpg"
+         alt="SCP-682" width="35%"></a>
+       <a name="895"><img class="scp12" src="https://gamepedia.cursecdn.com/scpcb_gamepedia/thumb/f/fe/SCP-895.png/140px-SCP-895.png?version=078f19d969d650c665e06856881fe30d"
+         alt="SCP-895" width="35%"></a>
+       <a name="914"><img class="scp13" src="https://i.redd.it/lmrve6w23ym31.jpg"
+         alt="SCP-914" width="35%"></a>
+       <a name="999"><img class="scp14" src="https://vignette.wikia.nocookie.net/monster/images/f/f1/122915.png/revision/latest/scale-to-width-down/340?cb=20140928214428"
+         alt="SCP-999" width="35%"></a>
+       <a name="1730"><img class="scp15" src="https://scp-wiki.wdfiles.com/local--files/scp-1730/power.jpg"
+         alt="SCP-1730" width="35%"></a>
+       <a name="1981"><img class="scp16" src="https://i.redd.it/xcp2suebsd531.jpg"
+         alt="SCP-1981" width="35%"></a>
+       <a name="2000"><img class="scp17" src="https://scp-wiki.wdfiles.com/local--files/scp-2000/Remember_Us.jpg"
+         alt="SCP-2000" width="35%"></a>
+       <a name="2317"><img class="scp18" src="https://vignette.wikia.nocookie.net/vsdebating/images/3/33/SCP-2317.png/revision/latest/scale-to-width-down/340?cb=20170420163519"
+         alt="SCP-2317" width="35%"></a>
+       <a name="2521"><img class="scp19" src="https://scp-wiki.wdfiles.com/local--files/scp-2521/scp_number.jpg"
+         alt="SCP-2521" width="35%"></a>
+       <a name="3000"><img class="scp20" src="https://scp-wiki.wdfiles.com/local--files/scp-3000/gaslight.png"
+         alt="SCP-3000" width="35%"></a>
+       <a name="3001"><img class="scp21" src="https://i.ytimg.com/vi/BEjb6irNNX4/maxresdefault.jpg"
+         alt="SCP-3001" width="35%"></a>
+       <a name="3008"><img class="scp22" src="https://www.bogleech.com/scp/3008.jpg"
+         alt="SCP-3008" width="35%"></a>
+       <a name="3999"><img class="scp23" src="https://vignette.wikia.nocookie.net/villains/images/d/dd/SCP-3999.jpg/revision/latest?cb=20190830224521"
+         alt="SCP-3999" width="35%"></a>
+       <a name="4999"><img class="scp24" src="https://scp-wiki.wdfiles.com/local--files/scp-4999/death.png"
+         alt="SCP-4999" width="35%"></a>
+      </div>
+      <div class="description">
+       <p class="ano1"><a href="http://www.scp-wiki.net/scp-049"><b>DESCRIPTION</b></a><p>
+       <p class="ano2"><a href="http://www.scp-wiki.net/scp-055"><b>DESCRIPTION</b></a><p>
+       <p class="ano3"><a href="http://www.scp-wiki.net/scp-087"><b>DESCRIPTION</b></a><p>
+       <p class="ano4"><a href="http://www.scp-wiki.net/scp-093"><b>DESCRIPTION</b></a><p>
+       <p class="ano5"><a href="http://www.scp-wiki.net/scp-096"><b>DESCRIPTION</b></a><p>
+       <p class="ano6"><a href="http://www.scp-wiki.net/scp-106"><b>DESCRIPTION</b></a><p>
+       <p class="ano7"><a href="http://www.scp-wiki.net/scp-173"><b>DESCRIPTION</b></a><p>
+       <p class="ano8"><a href="http://www.scp-wiki.net/scp-231"><b>DESCRIPTION</b></a><p>
+       <p class="ano9"><a href="http://www.scp-wiki.net/scp-294"><b>DESCRIPTION</b></a><p>
+       <p class="ano10"><a href="http://www.scp-wiki.net/scp-426"><b>DESCRIPTION</b></a><p>
+       <p class="ano11"><a href="http://www.scp-wiki.net/scp-682"><b>DESCRIPTION</b></a><p>
+       <p class="ano12"><a href="http://www.scp-wiki.net/scp-895"><b>DESCRIPTION</b></a><p>
+       <p class="ano13"><a href="http://www.scp-wiki.net/scp-914"><b>DESCRIPTION</b></a><p>
+       <p class="ano14"><a href="http://www.scp-wiki.net/scp-999"><b>DESCRIPTION</b></a><p>
+       <p class="ano15"><a href="http://www.scp-wiki.net/scp-1730"><b>DESCRIPTION</b></a><p>
+       <p class="ano16"><a href="http://www.scp-wiki.net/scp-1981"><b>DESCRIPTION</b></a><p>
+       <p class="ano17"><a href="http://www.scp-wiki.net/scp-2000"><b>DESCRIPTION</b></a><p>
+       <p class="ano18"><a href="http://www.scp-wiki.net/scp-2317"><b>DESCRIPTION</b></a><p>
+       <p class="ano19"><a href="http://www.scp-wiki.net/scp-2521"><b>DESCRIPTION</b></a><p>
+       <p class="ano20"><a href="http://www.scp-wiki.net/scp-3000"><b>DESCRIPTION</b></a><p>
+       <p class="ano21"><a href="http://www.scp-wiki.net/scp-3001"><b>DESCRIPTION</b></a><p>
+       <p class="ano22"><a href="http://www.scp-wiki.net/scp-3008"><b>DESCRIPTION</b></a><p>
+       <p class="ano23"><a href="http://www.scp-wiki.net/scp-3999"><b>DESCRIPTION</b></a><p>
+       <p class="ano24"><a href="http://www.scp-wiki.net/scp-4999"><b>DESCRIPTION</b></a><p>
+     </div>
     </div>
   </body>
 </html>
