--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,12 @@
       <div class="title">
         <p>Secure. Contain. Protect.</p>
       </div>
+      <div class="Foundation">
+        <p>The SCP Foundation is collection of researchers and scientists that
+          secure and contain anomalies that exist within our world in order to
+          protect humanity. These anomalies are classified by their object class
+          in which some are inherently more dangerous than others.</p>
+      </div>
       <div class="meaning">
         <p><center><font size="6", color="white">Object Class - Scale to
           determine danger of anomalies</font></center></p>
@@ -142,80 +148,175 @@
     </div>
     <div class="profile">
       <div class="set">
-       <a name="049"><img class="scp1" src="https://scp-wiki.wdfiles.com/local--files/scp-049/SCP-049"
-         alt="SCP-049" width="35%"></a>
-       <a name="055"><img class="scp2" src="https://cdn1.iconfinder.com/data/icons/rounded-flat-country-flag-collection-1/2000/_Unknown.png"
-         alt="SCP-055" width="35%"></a>
-       <a name="087"><img class="scp3" src="https://lh3.googleusercontent.com/proxy/Q3mC_5gDm7kS5abjtgkbcyuaKGEWUJmtvgKwATKwDVhErK0IZerUoyKx_xDV1fha1J0uxlLPZtQX7x0"
-         alt="SCP-087" width="35%"></a>
-       <a name="093"><img class="scp4" src="https://i.imgur.com/fgv7B4l.png"
-         alt="SCP-093" width="35%"></a>
-       <a name="096"><img class="scp5" src="https://i.redd.it/5dx4muk6qed21.jpg"
-         alt="SCP-096" width="35%"></a>
-       <a name="106"><img class="scp6" src="https://scp-wiki.wdfiles.com/local--files/scp-106/106emergenceklay.jpg"
-         alt="SCP-106" width="35%"></a>
-       <a name="173"><img class="scp7" src="https://scp-wiki.wdfiles.com/local--files/scp-173/SCP-173.jpg"
-         alt="SCP-173" width="35%"></a>
-       <a name="231"><img class="scp8" src="https://vignette.wikia.nocookie.net/vsdebating/images/0/0b/SCP-231.png/revision/latest/scale-to-width-down/340?cb=20170425202046"
-         alt="SCP-231" width="35%"></a>
-       <a name="294"><img class="scp9" src="https://lh3.googleusercontent.com/proxy/sWW9RJN_TswQRGyIh89YAN9uebwP-m5GuFElE2WcJxv0jivtbeGdMJU1-g6jUkXd3i9Xy-Vbs_G8gRsZvfwV3Njtg9nfFSu8AkiFDJvQ7I0Ic5KLeiWBf4n0RhcDkkMwskagu0gCLnVQ"
-         alt="SCP-294" width="35%"></a>
-       <a name="426"><img class="scp10" src="https://i.pinimg.com/originals/d3/4f/e5/d34fe54b0687de5a3114228e7482117a.jpg"
-         alt="SCP-426" width="35%"></a>
-       <a name="682"><img class="scp11" src="https://scp-wiki.wdfiles.com/local--files/scp-682/monster8editub9.jpg"
-         alt="SCP-682" width="35%"></a>
-       <a name="895"><img class="scp12" src="https://gamepedia.cursecdn.com/scpcb_gamepedia/thumb/f/fe/SCP-895.png/140px-SCP-895.png?version=078f19d969d650c665e06856881fe30d"
-         alt="SCP-895" width="35%"></a>
-       <a name="914"><img class="scp13" src="https://i.redd.it/lmrve6w23ym31.jpg"
-         alt="SCP-914" width="35%"></a>
-       <a name="999"><img class="scp14" src="https://vignette.wikia.nocookie.net/monster/images/f/f1/122915.png/revision/latest/scale-to-width-down/340?cb=20140928214428"
-         alt="SCP-999" width="35%"></a>
-       <a name="1730"><img class="scp15" src="https://scp-wiki.wdfiles.com/local--files/scp-1730/power.jpg"
-         alt="SCP-1730" width="35%"></a>
-       <a name="1981"><img class="scp16" src="https://i.redd.it/xcp2suebsd531.jpg"
-         alt="SCP-1981" width="35%"></a>
-       <a name="2000"><img class="scp17" src="https://scp-wiki.wdfiles.com/local--files/scp-2000/Remember_Us.jpg"
-         alt="SCP-2000" width="35%"></a>
-       <a name="2317"><img class="scp18" src="https://vignette.wikia.nocookie.net/vsdebating/images/3/33/SCP-2317.png/revision/latest/scale-to-width-down/340?cb=20170420163519"
-         alt="SCP-2317" width="35%"></a>
-       <a name="2521"><img class="scp19" src="https://scp-wiki.wdfiles.com/local--files/scp-2521/scp_number.jpg"
-         alt="SCP-2521" width="35%"></a>
-       <a name="3000"><img class="scp20" src="https://scp-wiki.wdfiles.com/local--files/scp-3000/gaslight.png"
-         alt="SCP-3000" width="35%"></a>
-       <a name="3001"><img class="scp21" src="https://i.ytimg.com/vi/BEjb6irNNX4/maxresdefault.jpg"
-         alt="SCP-3001" width="35%"></a>
-       <a name="3008"><img class="scp22" src="https://www.bogleech.com/scp/3008.jpg"
-         alt="SCP-3008" width="35%"></a>
-       <a name="3999"><img class="scp23" src="https://vignette.wikia.nocookie.net/villains/images/d/dd/SCP-3999.jpg/revision/latest?cb=20190830224521"
-         alt="SCP-3999" width="35%"></a>
-       <a name="4999"><img class="scp24" src="https://scp-wiki.wdfiles.com/local--files/scp-4999/death.png"
-         alt="SCP-4999" width="35%"></a>
+       <div class="box1">
+        <a name="049"><img class="scp1" src="https://scp-wiki.wdfiles.com/local--files/scp-049/SCP-049"
+          alt="SCP-049" width="90%"></a>
+          <div class="lay1">
+            <div class="ano1"></div>
+          </div>
+        </div>
+       <div class="box2">
+        <a name="055"><img class="scp2" src="https://cdn1.iconfinder.com/data/icons/rounded-flat-country-flag-collection-1/2000/_Unknown.png"
+          alt="SCP-055" width="90%"></a>
+          <div class="lay2">
+            <div class="ano2"></div>
+          </div>
+       </div>
+       <div class="box3">
+        <a name="087"><img class="scp3" src="https://lh3.googleusercontent.com/proxy/Q3mC_5gDm7kS5abjtgkbcyuaKGEWUJmtvgKwATKwDVhErK0IZerUoyKx_xDV1fha1J0uxlLPZtQX7x0"
+          alt="SCP-087" width="90%"></a>
+          <div class="lay3">
+            <div class="ano3"></div>
+          </div>
+       </div>
+       <div class="box4">
+        <a name="093"><img class="scp4" src="https://i.imgur.com/fgv7B4l.png"
+          alt="SCP-093" width="90%"></a>
+          <div class="lay4">
+            <div class="ano4"></div>
+          </div>
+       </div>
+       <div class="box5">
+        <a name="096"><img class="scp5" src="https://i.redd.it/5dx4muk6qed21.jpg"
+          alt="SCP-096" width="90%"></a>
+          <div class="lay5">
+            <div class="ano5"></div>
+          </div>
+       </div>
+       <div class="box6">
+        <a name="106"><img class="scp6" src="https://scp-wiki.wdfiles.com/local--files/scp-106/106emergenceklay.jpg"
+          alt="SCP-106" width="90%"></a>
+          <div class="lay6">
+            <div class="ano6"></div>
+          </div>
+       </div>
+       <div class="box7">
+        <a name="173"><img class="scp7" src="https://scp-wiki.wdfiles.com/local--files/scp-173/SCP-173.jpg"
+          alt="SCP-173" width="90%"></a>
+          <div class="lay7">
+            <div class="ano7"></div>
+          </div>
+       </div>
+       <div class="box8">
+        <a name="231"><img class="scp8" src="https://vignette.wikia.nocookie.net/vsdebating/images/0/0b/SCP-231.png/revision/latest/scale-to-width-down/340?cb=20170425202046"
+          alt="SCP-231" width="90%"></a>
+          <div class="lay8">
+            <div class="ano8"></div>
+          </div>
+       </div>
+       <div class="box9">
+        <a name="294"><img class="scp9" src="https://lh3.googleusercontent.com/proxy/sWW9RJN_TswQRGyIh89YAN9uebwP-m5GuFElE2WcJxv0jivtbeGdMJU1-g6jUkXd3i9Xy-Vbs_G8gRsZvfwV3Njtg9nfFSu8AkiFDJvQ7I0Ic5KLeiWBf4n0RhcDkkMwskagu0gCLnVQ"
+          alt="SCP-294" width="90%"></a>
+          <div class="lay9">
+            <div class="ano9"></div>
+          </div>
+       </div>
+       <div class="box10">
+        <a name="426"><img class="scp10" src="https://i.pinimg.com/originals/d3/4f/e5/d34fe54b0687de5a3114228e7482117a.jpg"
+          alt="SCP-426" width="90%"></a>
+          <div class="lay10">
+            <div class="ano10"></div>
+          </div>
+       </div>
+       <div class="box11">
+        <a name="682"><img class="scp11" src="https://scp-wiki.wdfiles.com/local--files/scp-682/monster8editub9.jpg"
+          alt="SCP-682" width="90%"></a>
+          <div class="lay11">
+            <div class="ano11"></div>
+          </div>
+       </div>
+       <div class="box12">
+        <a name="895"><img class="scp12" src="https://gamepedia.cursecdn.com/scpcb_gamepedia/thumb/f/fe/SCP-895.png/140px-SCP-895.png?version=078f19d969d650c665e06856881fe30d"
+          alt="SCP-895" width="90%"></a>
+          <div class="lay12">
+            <div class="ano12"></div>
+          </div>
+       </div>
+       <div class="box13">
+        <a name="914"><img class="scp13" src="https://i.redd.it/lmrve6w23ym31.jpg"
+          alt="SCP-914" width="90%"></a>
+          <div class="lay13">
+            <div class="ano13"></div>
+          </div>
+       </div>
+       <div class="box14">
+        <a name="999"><img class="scp14" src="https://vignette.wikia.nocookie.net/monster/images/f/f1/122915.png/revision/latest/scale-to-width-down/340?cb=20140928214428"
+          alt="SCP-999" width="90%"></a>
+          <div class="lay14">
+            <div class="ano14"></div>
+          </div>
+       </div>
+       <div class="box15">
+        <a name="1730"><img class="scp15" src="https://scp-wiki.wdfiles.com/local--files/scp-1730/power.jpg"
+          alt="SCP-1730" width="90%"></a>
+          <div class="lay15">
+            <div class="ano15"></div>
+          </div>
+       </div>
+       <div class="box16">
+        <a name="1981"><img class="scp16" src="https://i.redd.it/xcp2suebsd531.jpg"
+          alt="SCP-1981" width="90%"></a>
+          <div class="lay16">
+            <div class="ano16"></div>
+          </div>
+       </div>
+       <div class="box17">
+        <a name="2000"><img class="scp17" src="https://scp-wiki.wdfiles.com/local--files/scp-2000/Remember_Us.jpg"
+          alt="SCP-2000" width="90%"></a>
+          <div class="lay17">
+            <div class="ano17"></div>
+          </div>
+       </div>
+       <div class="box18">
+        <a name="2317"><img class="scp18" src="https://vignette.wikia.nocookie.net/vsdebating/images/3/33/SCP-2317.png/revision/latest/scale-to-width-down/340?cb=20170420163519"
+          alt="SCP-2317" width="90%"></a>
+          <div class="lay18">
+            <div class="ano18"></div>
+          </div>
+       </div>
+       <div class="box19">
+        <a name="2521"><img class="scp19" src="https://scp-wiki.wdfiles.com/local--files/scp-2521/scp_number.jpg"
+          alt="SCP-2521" width="90%"></a>
+          <div class="lay19">
+            <div class="ano19"></div>
+          </div>
+       </div>
+       <div class="box20">
+        <a name="3000"><img class="scp20" src="https://scp-wiki.wdfiles.com/local--files/scp-3000/gaslight.png"
+          alt="SCP-3000" width="90%"></a>
+          <div class="lay20">
+            <div class="ano20"></div>
+          </div>
+       </div>
+       <div class="box21">
+        <a name="3001"><img class="scp21" src="https://i.ytimg.com/vi/BEjb6irNNX4/maxresdefault.jpg"
+          alt="SCP-3001" width="90%"></a>
+          <div class="lay21">
+            <div class="ano21"></div>
+          </div>
+       </div>
+       <div class="box22">
+        <a name="3008"><img class="scp22" src="https://www.bogleech.com/scp/3008.jpg"
+          alt="SCP-3008" width="90%"></a>
+          <div class="lay22">
+            <div class="ano22"></div>
+          </div>
+       </div>
+       <div class="box23">
+        <a name="3999"><img class="scp23" src="https://vignette.wikia.nocookie.net/villains/images/d/dd/SCP-3999.jpg/revision/latest?cb=20190830224521"
+          alt="SCP-3999" width="90%"></a>
+          <div class="lay23">
+            <div class="ano23"></div>
+          </div>
+       </div>
+       <div class="box24">
+        <a name="4999"><img class="scp24" src="https://scp-wiki.wdfiles.com/local--files/scp-4999/death.png"
+          alt="SCP-4999" width="90%"></a>
+          <div class="lay24">
+            <div class="ano24"></div>
+          </div>
+       </div>
       </div>
-      <div class="description">
-       <p class="ano1"><a href="http://www.scp-wiki.net/scp-049"><b>DESCRIPTION</b></a><p>
-       <p class="ano2"><a href="http://www.scp-wiki.net/scp-055"><b>DESCRIPTION</b></a><p>
-       <p class="ano3"><a href="http://www.scp-wiki.net/scp-087"><b>DESCRIPTION</b></a><p>
-       <p class="ano4"><a href="http://www.scp-wiki.net/scp-093"><b>DESCRIPTION</b></a><p>
-       <p class="ano5"><a href="http://www.scp-wiki.net/scp-096"><b>DESCRIPTION</b></a><p>
-       <p class="ano6"><a href="http://www.scp-wiki.net/scp-106"><b>DESCRIPTION</b></a><p>
-       <p class="ano7"><a href="http://www.scp-wiki.net/scp-173"><b>DESCRIPTION</b></a><p>
-       <p class="ano8"><a href="http://www.scp-wiki.net/scp-231"><b>DESCRIPTION</b></a><p>
-       <p class="ano9"><a href="http://www.scp-wiki.net/scp-294"><b>DESCRIPTION</b></a><p>
-       <p class="ano10"><a href="http://www.scp-wiki.net/scp-426"><b>DESCRIPTION</b></a><p>
-       <p class="ano11"><a href="http://www.scp-wiki.net/scp-682"><b>DESCRIPTION</b></a><p>
-       <p class="ano12"><a href="http://www.scp-wiki.net/scp-895"><b>DESCRIPTION</b></a><p>
-       <p class="ano13"><a href="http://www.scp-wiki.net/scp-914"><b>DESCRIPTION</b></a><p>
-       <p class="ano14"><a href="http://www.scp-wiki.net/scp-999"><b>DESCRIPTION</b></a><p>
-       <p class="ano15"><a href="http://www.scp-wiki.net/scp-1730"><b>DESCRIPTION</b></a><p>
-       <p class="ano16"><a href="http://www.scp-wiki.net/scp-1981"><b>DESCRIPTION</b></a><p>
-       <p class="ano17"><a href="http://www.scp-wiki.net/scp-2000"><b>DESCRIPTION</b></a><p>
-       <p class="ano18"><a href="http://www.scp-wiki.net/scp-2317"><b>DESCRIPTION</b></a><p>
-       <p class="ano19"><a href="http://www.scp-wiki.net/scp-2521"><b>DESCRIPTION</b></a><p>
-       <p class="ano20"><a href="http://www.scp-wiki.net/scp-3000"><b>DESCRIPTION</b></a><p>
-       <p class="ano21"><a href="http://www.scp-wiki.net/scp-3001"><b>DESCRIPTION</b></a><p>
-       <p class="ano22"><a href="http://www.scp-wiki.net/scp-3008"><b>DESCRIPTION</b></a><p>
-       <p class="ano23"><a href="http://www.scp-wiki.net/scp-3999"><b>DESCRIPTION</b></a><p>
-       <p class="ano24"><a href="http://www.scp-wiki.net/scp-4999"><b>DESCRIPTION</b></a><p>
      </div>
     </div>
   </body>
