--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Keania+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Da|Bungee|Expletus+Sans:700&display=swap" rel="stylesheet">
     <title>SCP</title>
   </head>
   <body>
     <div class="logo">
       <a href="index2.html">
-      <img class="Pause" src="https://pbs.twimg.com/profile_images/1138637906074132482/KCjAk2i_.jpg"
-      alt="SCP Logo Static" width="70.5%" height="70.5%">
       <img class="Go" src="https://pa1.narvii.com/7081/25ca91a1c0e18af60c484b95e66fdb627c12e694r1-320-308_00.gif"
       alt="SCP Logo" width="40%" height="40%">
       </a>
     </div>
+    <p><font color="white">Welcome to the Foundation</font></p>
+    <p><font color="red">LEVEL 5 CLEARANCE ACCESS REQUIRED</font></p>
   </body>
 </html>
