--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="contain">
-      <table style="width:35%">
+      <table>
         <tr>
           <th><a href="#049">SCP-049</a></th>
           <th><font color="green">The Plague Doctor</font></th>
